# MemTOTAL

./: .gitignore  20260309-independent-writer-deep-prefix-circuit.md  20260309-post-rg3-writer-value-microlora-multitask.md  20260309-writer-weaver-rescue.md  AGENTS.md  PLAN.md  PLANv2.md  PLANv3.md  PLANv4.md  PLANv5.md  PLANv6.md  PLANv7-LR-updated.md  PLANv7.md  PLANv8.md  PLANv9.md  README.md  REVIEW_SNAPSHOT_MANIFEST.json  analysis.py  eval.py  pyproject.toml  train.py
MemGen-master/: README.md  main.py
docs/: AGENTS.md  ARCHITECTURE.md  EXPERIMENTS_INFO.md  GITHUB_REVIEW_EXPORT.md  MAIN_IDEA.md  TODO_LIST.md  benchmark-data.md  golden-principles.md  tech-debt-tracker.md
results/: README.md
scripts/: 10_pretrain_writer.sh  20_meta_train_queries.sh  30_adapt_queries.sh  arm_planv8_qwen34_chain.sh  arm_planv9_v9_1_qwen34.sh  build_github_review_snapshot.py  cleanup_hf_cache.sh  collect_artifacts.sh  dev_boot_smoke.sh  monitor_writer_deep_prefix_jointpeft.py  move_hf_cache_to_data_disk.sh  planv8_v8_2_config.py  planv8_v8_3_config.py  planv8_v8_4_config.py  planv8_v8_5_config.py  planv8_v8_6_config.py  planv8_v8_7_config.py  planv8_v8_7_retrieval_eval.py  planv8_v8_8_config.py  planv8_v8_8_selection_manifest.py  planv8_v8_9_config.py  planv8_watch_progress.py  planv9_v9_0_config.py  planv9_v9_1_alfworld_eval.py  planv9_v9_1_config.py  planv9_v9_1_retrieval_eval.py  postpublish_planv9_v9_1.sh  prepare_local_qwen25_model.sh  prepare_local_qwen34_model.sh  prepare_local_qwen3_model.sh  profile_run.sh  publish_review_artifacts.sh  push_github_review_snapshot.sh  (+175 more)
(+7032 files in other folders)
