[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memtotal"
version = "0.1.0"
description = "Bootstrap harness for MemTOTAL experiments."
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "datasets>=4.0.0",
  "rouge-score>=0.1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
